[project]
name = "disclosurecheck"
version = "0.2.0"
authors = [
  { name="Michael Scovetta", email="michael.scovetta@gmail.com" },
]
description = "Discover methods for disclosing security vulnerabilities to a project privately."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "packageurl-python >= 0.14.0",
  "PyGithub >= 2.2.0",
  "requests >= 2.31.0",
  "requests-cache >= 1.2.0",
  "urllib3 >= 2.2.1",
  "urlextract >= 1.9.0",
  "PyYAML >= 6.0.1",
  "rich >= 13.7.1",
  "validators >= 0.22.0",
  "beautifulsoup4 >= 4.12.3",
]

license = {file = "LICENSE"}

[project.urls]
"Homepage" = "https://github.com/ossf/disclosure-check"
"Bug Tracker" = "https://github.com/ossf/disclosure-check/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["*tests*"]

[project.scripts]
disclosurecheck = "disclosurecheck.main:start"

[tool.pdm.scripts]
test = "python -m unittest discover -s tests.disclosurecheck -t ."
